[IMP] swagger接收的kafka配置ack-mode为RECORD

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
       group-id: manager-server
       auto-offset-reset: latest
     listener:
-      ack-mode: manual_immediate
+      ack-mode: record
       poll-timeout: 3000
   cloud:
     stream:
