--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -49,6 +49,9 @@ choerodon:
   swagger:
     client: client
     oauth-url: http://localhost:8080/oauth/oauth/authorize
+    fetch:
+      callBack: true
+      time: 10
     skip:
       service: register-server, api-gateway, gateway-helper, oauth-server, config-server, event-store-service
   gateway:
