--- a/chart/manager-service/values.yaml
+++ b/chart/manager-service/values.yaml
@@ -9,6 +9,7 @@ image:
   pullPolicy: Always
 
 preJob:
+  image: registry.cn-hangzhou.aliyuncs.com/choerodon-tools/dbtool:0.5.0
   preInitDB:
     mysql:
       host: localhost
