--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>io.choerodon</groupId>
             <artifactId>choerodon-starter-swagger</artifactId>
-            <version>${choerodon.starters.version}</version>
+            <version>0.5.2.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>io.choerodon</groupId>
