--- a/pom.xml
+++ b/pom.xml
@@ -132,5 +132,12 @@
     </dependencies>
     <build>
         <finalName>app</finalName>
+        <!-- 用自定义swagger-ui.html和springfox.js覆盖 jar包中的文件-->
+        <resources>
+            <resource>
+                <directory>src/main/resources/swagger-ui</directory>
+                <targetPath>META-INF/resources</targetPath>
+            </resource>
+        </resources>
     </build>
 </project>
