--- a/pom.xml
+++ b/pom.xml
@@ -135,7 +135,7 @@
         <!-- 用自定义swagger-ui.html和springfox.js覆盖 jar包中的文件-->
         <resources>
             <resource>
-                <directory>src/main/resources/swagger-ui</directory>
+                <directory>src/main/swagger-ui</directory>
                 <targetPath>META-INF/resources</targetPath>
             </resource>
         </resources>
