[ADD] 添加api测试查询controller的单元测试

--- a/src/test/resources/config/application-test.yml
+++ b/src/test/resources/config/application-test.yml
@@ -19,7 +19,9 @@ hystrix:
     queue:
       enabled: false
 data:
-  dir: src/main/resources
+  dir: src/test/resources
 eureka:
   client:
     enabled: false
+management:
+  port: 0 #设置管理端口为随机端口
