--- a/src/test/resources/config/application-test.yml
+++ b/src/test/resources/config/application-test.yml
@@ -25,3 +25,8 @@ eureka:
     enabled: false
 management:
   port: 0 #设置管理端口为随机端口
+choerodon:
+  swagger:
+    skip:
+      service: register-server, api-gateway, gateway-helper, oauth-server, config-server, event-store-service
+
