--- a/chart/manager-service/values.yaml
+++ b/chart/manager-service/values.yaml
@@ -11,6 +11,7 @@ image:
 preJob:
   image: registry.cn-hangzhou.aliyuncs.com/choerodon-tools/dbtool:0.5.6
   preInitDB:
+    enable: true
     datasource:
       url: jdbc:mysql://localhost:3306/manager_service?useUnicode=true&characterEncoding=utf-8&useSSL=false
       username: username
