[IMP] 将监听kafka的方式修改为eureka-event；去除了向kafka发送消息；去除了spring-for-kafka配置；修复单测；修复部分sonarlint异常

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <version>0.8.0.RELEASE</version>
     </parent>
     <properties>
-        <choerodon.starters.version>0.6.3.RELEASE</choerodon.starters.version>
+        <choerodon.starters.version>0.7.0.RELEASE</choerodon.starters.version>
     </properties>
 
     <dependencies>
@@ -65,6 +65,11 @@
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
             <version>3.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.choerodon</groupId>
+            <artifactId>choerodon-starter-eureka-event</artifactId>
+            <version>${choerodon.starters.version}</version>
         </dependency>
         <!-- config server -->
         <dependency>
