--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,16 +3,6 @@ spring:
     url: jdbc:mysql://localhost/manager_service?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: choerodon
     password: 123456
-  kafka:
-    bootstrap-servers: localhost:9092
-    producer:
-      value-serializer: org.apache.kafka.common.serialization.ByteArraySerializer
-    consumer:
-      group-id: manager-server
-      auto-offset-reset: latest
-    listener:
-      ack-mode: record
-      poll-timeout: 3000
   cloud:
     stream:
       default-binder: kafka
@@ -46,13 +36,15 @@ security:
     enabled: false
   ignored: /swagger-ui.html,/swagger-resources/**, /webjars/** , /docs/**
 choerodon:
+  eureka:
+    event:
+      max-cache-size: 300
+      retry-time: 5
+      retry-interval: 3
+      skip-services: register-server, api-gateway, gateway-helper, oauth-server, config-server, event-store-service
   swagger:
     client: client
     oauth-url: http://localhost:8080/oauth/oauth/authorize
-    fetch:
-      time: 10
-    skip:
-      service: register-server, api-gateway, gateway-helper, oauth-server, config-server, event-store-service
   gateway:
     domain: 127.0.0.1:8080
     names: api-gateway, gateway-helper
