--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -2,4 +2,4 @@ FROM registry.cn-hangzhou.aliyuncs.com/choerodon-tools/javabase:0.6.0
 COPY app.jar /manager-service.jar
 COPY agent /agent
 COPY entrypoint.sh /entrypoint.sh
-ENTRYPOINT ["entrypoint.sh"]
+ENTRYPOINT ["/entrypoint.sh"]
