--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,5 +1,3 @@
 FROM registry.cn-hangzhou.aliyuncs.com/choerodon-tools/javabase:0.7.0
 COPY app.jar /manager-service.jar
-COPY agent /agent
-COPY entrypoint.sh /entrypoint.sh
-ENTRYPOINT ["entrypoint.sh"]
+ENTRYPOINT exec java $JAVA_OPTS  -jar /manager-service.jar
