--- a/chart/manager-service/values.yaml
+++ b/chart/manager-service/values.yaml
@@ -32,7 +32,12 @@ env:
     CHOERODON_SWAGGER_OAUTH_URL: http://localhost:8080/oauth/oauth/authorize
     CHOERODON_GATEWAY_DOMAIN: 127.0.0.1:8080
 
-    JAVA_OPTS: -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap
+    # skywalking 代理端配置
+    SKYWLKING_OPS: >-
+      -javaagent:/agent/skywalking-agent.jar
+      -Dskywalking.agent.application_code=iam-service
+      -Dskywalking.agent.sample_n_per_3_secs=-1
+      -Dskywalking.collector.backend_service=oap.skywalking:11800
 
 metrics:
   path: /prometheus
