--- a/chart/manager-service/values.yaml
+++ b/chart/manager-service/values.yaml
@@ -33,9 +33,9 @@ env:
     CHOERODON_GATEWAY_DOMAIN: 127.0.0.1:8080
 
     # skywalking 代理端配置
-    SKYWLKING_OPS: >-
+    SKYWALKING_OPTS: >-
       -javaagent:/agent/skywalking-agent.jar
-      -Dskywalking.agent.application_code=iam-service
+      -Dskywalking.agent.application_code=manager-service
       -Dskywalking.agent.sample_n_per_3_secs=-1
       -Dskywalking.collector.backend_service=oap.skywalking:11800
 
