--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,11 @@ spring:
     url: jdbc:mysql://localhost/manager_service?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: choerodon
     password: 123456
+  redis:
+    host: localhost
+    port: 6379
+    #使用和gateway-helper同一个redis数据库，存储在gateway-helper,查询在manager-service
+    database: 4
 mybatis:
   mapperLocations: classpath*:/mapper/*.xml
   configuration:
