--- a/chart/manager-service/values.yaml
+++ b/chart/manager-service/values.yaml
@@ -34,11 +34,11 @@ env:
     SPRING_REDIS_DATABASE: 4
 
     # skywalking 代理端配置
-    SKYWALKING_OPTS: >-
-      -javaagent:/agent/skywalking-agent.jar
-      -Dskywalking.agent.application_code=manager-service
-      -Dskywalking.agent.sample_n_per_3_secs=-1
-      -Dskywalking.collector.backend_service=oap.skywalking:11800
+#    SKYWALKING_OPTS: >-
+#      -javaagent:/agent/skywalking-agent.jar
+#      -Dskywalking.agent.application_code=manager-service
+#      -Dskywalking.agent.sample_n_per_3_secs=-1
+#      -Dskywalking.collector.backend_service=oap.skywalking:11800
 
 metrics:
   path: /prometheus
