[IMP] 升级spring boot版本到2.0.6, spring cloud到Finchley.SR2

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -4,6 +4,5 @@ spring:
   application:
     name: manager-service
 management:
-  port: 8964
-  security:
-    enabled: false
+  server:
+    port: 8964
