--- a/chart/manager-service/values.yaml
+++ b/chart/manager-service/values.yaml
@@ -41,7 +41,7 @@ env:
 #      -Dskywalking.collector.backend_service=oap.skywalking:11800
 
 metrics:
-  path: /prometheus
+  path: /actuator/prometheus
   label: spring-boot
 
 logs:
