--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
         </dependency>
         <dependency>
             <groupId>io.choerodon</groupId>
+            <artifactId>choerodon-starter-asgard</artifactId>
+            <version>${choerodon.starters.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.choerodon</groupId>
             <artifactId>choerodon-starter-core</artifactId>
             <version>${choerodon.starters.version}</version>
         </dependency>
