--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <version>0.9.0.RELEASE</version>
     </parent>
     <properties>
-        <choerodon.starters.version>0.10.0.RELEASE</choerodon.starters.version>
+        <choerodon.starters.version>0.11.0.RELEASE</choerodon.starters.version>
     </properties>
 
     <dependencies>
@@ -39,6 +39,11 @@
         <dependency>
             <groupId>io.choerodon</groupId>
             <artifactId>choerodon-starter-swagger</artifactId>
+            <version>${choerodon.starters.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.choerodon</groupId>
+            <artifactId>choerodon-starter-actuator</artifactId>
             <version>${choerodon.starters.version}</version>
         </dependency>
         <dependency>
@@ -112,7 +117,7 @@
         <!-- 添加cpu监控 -->
         <dependency>
             <groupId>io.choerodon</groupId>
-            <artifactId>choerodon-starter-hitoa</artifactId>
+            <artifactId>choerodon-starter-metric</artifactId>
             <version>${choerodon.starters.version}</version>
         </dependency>
         <!-- test -->
