--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@choerodon/boot": "0.1.x",
     "@choerodon/master": "0.1.x",
+    "choerodon-ui": "^0.6.3",
     "echarts": "^4.2.1",
     "echarts-for-react": "^2.0.14",
     "hjson": "^3.1.2",
