[UPD] 更新 values.yaml 变量名 enable改为enabled

--- a/chart/manager-service/values.yaml
+++ b/chart/manager-service/values.yaml
@@ -12,7 +12,7 @@ preJob:
   timeout: 300
   image: registry.cn-hangzhou.aliyuncs.com/choerodon-tools/dbtool:0.6.4
   preInitDB:
-    enable: true
+    enabled: true
     datasource:
       url: jdbc:mysql://localhost:3306/manager_service?useUnicode=true&characterEncoding=utf-8&useSSL=false
       username: username
