--- a/chart/manager-service/values.yaml
+++ b/chart/manager-service/values.yaml
@@ -2,35 +2,54 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+# pod运行数量
 replicaCount: 1
 
 image:
+  # 镜像库地址
   repository: registry.cn-hangzhou.aliyuncs.com/choerodon/manager-service
+  # 镜像拉取策略
   pullPolicy: IfNotPresent
 
 preJob:
+  # job超时时间
   timeout: 300
+  # job镜像库地址
   image: registry.cn-hangzhou.aliyuncs.com/choerodon-tools/dbtool:0.6.4
   preInitDB:
+    # 是否初始化manager_service数据库
     enabled: true
     datasource:
-      url: jdbc:mysql://localhost:3306/manager_service?useUnicode=true&characterEncoding=utf-8&useSSL=false
+      # manager_service数据库连接地址
+      url: jdbc:mysql://localhost:3306/manager_service?useUnicode=true&characterEncoding=utf-8&useSSL=false&useInformationSchema=true&remarks=true
+      # manager_service数据库用户名
       username: username
+      # manager_service数据库密码
       password: password
 
 deployment:
+  # 服务管理端口
   managementPort: 8964
 
 env:
   open:
-    SPRING_DATASOURCE_URL: jdbc:mysql://localhost/manager_service?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    # 数据库连接地址
+    SPRING_DATASOURCE_URL: jdbc:mysql://localhost/manager_service?useUnicode=true&characterEncoding=utf-8&useSSL=false&useInformationSchema=true&remarks=true
+    # 数据库用户名
     SPRING_DATASOURCE_USERNAME: username
+    #  数据库密码
     SPRING_DATASOURCE_PASSWORD: password
+    # 注册服务地址
     EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://localhost:8000/eureka/
+    # 认证服务地址
     CHOERODON_SWAGGER_OAUTH_URL: http://localhost:8080/oauth/oauth/authorize
+    # 网关服务地址
     CHOERODON_GATEWAY_DOMAIN: 127.0.0.1:8080
+    # redis主机地址
     SPRING_REDIS_HOST: localhost
+    # redis端口
     SPRING_REDIS_PORT: 6379
+    # redis db
     SPRING_REDIS_DATABASE: 4
 
     # skywalking 代理端配置
@@ -41,26 +60,31 @@ env:
 #      -Dskywalking.collector.backend_service=oap.skywalking:11800
 
 metrics:
+  # 收集应用的指标数据路径
   path: /actuator/prometheus
+  # 性能指标应用分组
   group: spring-boot
 
 logs:
+  # 日志收集格式
   parser: spring-boot
 
 service:
+  # 是否创建k8s service
   enabled: false
+  # service类型
   type: ClusterIP
+  # service端口
   port: 8963
+  # service名称
   name: manager-service
 
-resources: 
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources,such as Minikube. If you do want to specify resources,uncomment the following
-  # lines,adjust them as necessary,and remove the curly braces after 'resources:'.
+resources:
+  # k8s中容器能使用资源的资源最大值
   limits:
     # cpu: 100m
     memory: 3Gi
+  # k8s中容器使用的最小资源需求
   requests:
     # cpu: 100m
     memory: 2Gi
