--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -14,6 +14,8 @@ management:
     web:
       exposure:
         include: '*'
+    health:
+      show-details: "ALWAYS"
 feign:
   hystrix:
     enabled: false
