--- a/pom.xml
+++ b/pom.xml
@@ -2,16 +2,16 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>manager-service</artifactId>
-
-    <!--加parent-->
     <parent>
         <groupId>io.choerodon</groupId>
         <artifactId>choerodon-framework-parent</artifactId>
         <version>0.11.0.RELEASE</version>
     </parent>
+
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>manager-service</artifactId>
+    <version>0.19.0.RELEASE</version>
+
     <properties>
         <choerodon.starters.version>0.12.0.RELEASE</choerodon.starters.version>
         <choerodon.mainClass>io.choerodon.manager.ManagerServiceApplication</choerodon.mainClass>
