--- a/chart/manager-service/values.yaml
+++ b/chart/manager-service/values.yaml
@@ -34,13 +34,13 @@ deployment:
 env:
   open:
     # 数据库连接地址
-    SPRING_DATASOURCE_URL: jdbc:mysql://localhost/manager_service?useUnicode=true&characterEncoding=utf-8&useSSL=false&useInformationSchema=true&remarks=true
+    SPRING_DATASOURCE_URL: jdbc:mysql://127.0.0.1/manager_service?useUnicode=true&characterEncoding=utf-8&useSSL=false&useInformationSchema=true&remarks=true
     # 数据库用户名
-    SPRING_DATASOURCE_USERNAME: username
+    SPRING_DATASOURCE_USERNAME: choerodon
     #  数据库密码
     SPRING_DATASOURCE_PASSWORD: password
     # 注册服务地址
-    EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://localhost:8000/eureka/
+    EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://register-server:8000/eureka/
     # 认证服务地址
     CHOERODON_SWAGGER_OAUTH_URL: http://localhost:8080/oauth/oauth/authorize
     # 网关服务地址
@@ -70,21 +70,15 @@ logs:
   parser: spring-boot
 
 service:
-  # 是否创建k8s service
-  enabled: false
-  # service类型
-  type: ClusterIP
   # service端口
   port: 8963
-  # service名称
-  name: manager-service
 
 resources:
   # k8s中容器能使用资源的资源最大值
   limits:
     # cpu: 100m
-    memory: 3Gi
+    memory: 1.5Gi
   # k8s中容器使用的最小资源需求
   requests:
     # cpu: 100m
-    memory: 2Gi
+    memory: 1Gi
