[IMP] 更新master，修改平台接口前端页面样式

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "scripts": {
     "start": "choerodon-front-boot start --config ./react/config.js",
     "dist": "choerodon-front-boot dist --config ./react/config.js",
+    "clean-install": "rm -rf node_modules && rm package-lock.json && npm i --registry https://nexus.choerodon.com.cn/repository/choerodon-npm && chmod -R u+x node_modules",
     "lint-staged": "lint-staged",
     "lint-staged:es": "eslint",
     "compile": "gulp compile"
