--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,23 +4,24 @@ stages:
   - build
   - release
 
-# build-feature:
-#   stage: build
-#   script:
-#     - update_pom_version
-#     - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent test -Dmaven.test.failure.ignore=true -DskipTests=false -U
-#     - mvn package spring-boot:repackage
-#   only:
-#     - branches
-#   except:
-#     - master
-#     - tags
-#     - /^release-.*$/
-#     - /^hotfix-.*$/
+build-feature:
+  stage: build
+  script:
+    - update_pom_version
+    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent test -Dmaven.test.failure.ignore=true -DskipTests=false -U
+    - mvn package spring-boot:repackage
+  only:
+    - branches
+  except:
+    - master
+    - tags
+    - /^release-.*$/
+    - /^hotfix-.*$/
 
 build:
   stage: build
   script:
+    - echo $NPM_REGISTRY
     - update_pom_version
     - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent  test -Dmaven.test.failure.ignore=true -DskipTests=false -U
     - mvn --batch-mode  verify sonar:sonar  -Dsonar.host.url=$SONAR_URL -Dsonar.login=$SONAR_LOGIN -Dsonar.gitlab.project_id=$CI_PROJECT_PATH -Dsonar.gitlab.commit_sha=$CI_COMMIT_SHA -Dsonar.gitlab.ref_name=$CI_COMMIT_REF_NAME -Dsonar.analysis.serviceGroup=$GROUP_NAME -Dsonar.analysis.commitId=$CI_COMMIT_SHA -Dsonar.projectKey=${GROUP_NAME}:${PROJECT_NAME}
@@ -30,11 +31,15 @@ build:
     - chmod -R 755 node_modules
     - npm run compile
     - echo '//${NPM_REGISTRY}:_authToken=${NPM_TOKEN}'>.npmrc
-    - cat .npmrc
     - npm publish --registry https://nexus.choerodon.com.cn/repository/private-npm/
     - curl -X POST -F token=${FRONT_REPOSITORY_TOKEN} -F ref=${REF_NAME} https://code.choerodon.com.cn/api/v4/projects/32/trigger/pipeline
     - kaniko -c $PWD/docker -f $PWD/docker/Dockerfile -d ${DOCKER_REGISTRY}/${GROUP_NAME}/${PROJECT_NAME}:${CI_COMMIT_TAG}
   only:
+    refs:
+      - master
+      - tags
+      - /^release-.*$/
+      - /^hotfix-.*$/
     variables:
       - $COMBINE == null
 
