--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@choerodon/manager",
   "routeName": "manager",
-  "version": "0.20.0",
+  "version": "0.19.0",
   "description": "",
   "main": "./lib/src/app/iam/containers/IAMIndex.js",
   "files": [
     "lib"
   ],
   "peerDependencies": {
-    "@choerodon/boot": "0.20.x",
-    "@choerodon/master": "0.20.x"
+    "@choerodon/boot": "0.19.x",
+    "@choerodon/master": "0.19.x"
   },
   "dependencies": {
     "echarts": "^4.2.1",
@@ -18,8 +18,8 @@
     "react-codemirror": "^1.0.0"
   },
   "devDependencies": {
-    "@choerodon/boot": "0.20.x",
-    "@choerodon/master": "0.20.x",
+    "@choerodon/boot": "0.19.x",
+    "@choerodon/master": "0.19.x",
     "babel-preset-env": "^1.7.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
@@ -31,7 +31,7 @@
     "clean-install": "rm -rf node_modules && rm package-lock.json && npm i --registry https://nexus.choerodon.com.cn/repository/choerodon-npm && chmod -R u+x node_modules",
     "lint-staged": "lint-staged",
     "lint-staged:es": "eslint",
-    "compile": "gulp compile"
+    "compile": "choerodon-front-boot compile"
   },
   "author": "",
   "license": "ISC",
