[IMP]修改路由规则相关接口的异常处理

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,3 +37,8 @@ choerodon:
     executetTime: 100
   profiles:
     active: sit
+feign:
+  httpclient:
+    enabled: false
+  okhttp:
+    enabled: true
