--- a/pom.xml
+++ b/pom.xml
@@ -172,8 +172,25 @@
             <groupId>io.choerodon</groupId>
             <artifactId>choerodon-starter-webmvc</artifactId>
         </dependency>
+        <!-- retrofit -->
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>retrofit</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>converter-gson</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>converter-jackson</artifactId>
+            <version>2.4.0</version>
+        </dependency>
     </dependencies>
     <build>
-        <finalName>app</finalName>
+        <finalName>appName</finalName>
     </build>
 </project>
