[FIX] 修复前端拉取依赖包报错的问题

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-codemirror": "^1.0.0"
   },
   "devDependencies": {
-    "@choerodon/boot": "0.19.x",
+    "@choerodon/boot": "0.19.1",
     "@choerodon/master": "0.19.x",
     "babel-preset-env": "^1.7.0",
     "gulp": "^3.9.1",
