--- a/chart/manager-service/values.yaml
+++ b/chart/manager-service/values.yaml
@@ -7,12 +7,12 @@ preJob:
   # 初始化数据库定义
   preInitDB:
     # 是否初始化本服务数据库
-    enable: true
+    enabled: true
     datasource:
       # 初始化数据库更新数据的时候忽略的表或列
       exclusion: ~
       # 本服务数据库相关信息
-      url: jdbc:mysql://localhost:3306/manager_service?useUnicode=true&characterEncoding=utf-8&useSSL=false
+      url: jdbc:mysql://localhost:3306/manager_service?useUnicode=true&characterEncoding=utf-8&useSSL=false&useInformationSchema=true&remarks=true&serverTimezone=Asia/Shanghai
       username: username
       password: password
 
@@ -80,7 +80,7 @@ env:
     SPRING_DATASOURCE_PASSWORD: password
 
     # 认证服务地址
-    CHOERODON_SWAGGER_OAUTH_URL: http://localhost:8080/oauth/oauth/authorize
+    CHOERODON_SWAGGER_OAUTH_URL: http://api.example.com/#/oauth/oauth/authorize
 
     # Choerodon 平台 api 地址
     CHOERODON_GATEWAY_DOMAIN: api.example.com
@@ -89,7 +89,7 @@ env:
     # SKYWALKING_OPTS: >-
     #   -javaagent:/agent/skywalking-agent.jar
     #   -Dskywalking.agent.application_code=manager-service
-    #   -Dskywalking.agent.sample_n_per_3_secs=-1
+    #   -Dskywalking.agent.sample_n_per_3_secs=6
     #   -Dskywalking.collector.backend_service=oap.skywalking:11800
 
 ## Liveness 和 Readiness 探针相关配置
@@ -151,7 +151,7 @@ service:
   annotations: {}
     # prometheus.io/scrape: 'true'
     # prometheus.io/path: '/actuator/prometheus'
-  # prometheus.io/port: '8964'
+    # prometheus.io/port: '8964'
 
 ## 指标收集
 metrics:
