--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,69 +1,114 @@
-image: registry.cn-hangzhou.aliyuncs.com/choerodon-tools/cibase:0.8.1
+image: registry.cn-shanghai.aliyuncs.com/c7n/cibase:0.9.1
 
 stages:
   - build
   - release
 
-build-feature:
+build front:
   stage: build
   script:
-    - update_pom_version
-    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent test -Dmaven.test.failure.ignore=true -DskipTests=false -U
-    - mvn package spring-boot:repackage
-  only:
-    - branches
-  except:
-    - master
-    - tags
-    - /^release-.*$/
-    - /^hotfix-.*$/
-
-build:
-  stage: build
-  script:
-    - echo $NPM_REGISTRY
-    - update_pom_version
-    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent  test -Dmaven.test.failure.ignore=true -DskipTests=false -U
-    - mvn --batch-mode  verify sonar:sonar  -Dsonar.host.url=$SONAR_URL -Dsonar.login=$SONAR_LOGIN -Dsonar.gitlab.project_id=$CI_PROJECT_PATH -Dsonar.gitlab.commit_sha=$CI_COMMIT_SHA -Dsonar.gitlab.ref_name=$CI_COMMIT_REF_NAME -Dsonar.analysis.serviceGroup=$GROUP_NAME -Dsonar.analysis.commitId=$CI_COMMIT_SHA -Dsonar.projectKey=${GROUP_NAME}:${PROJECT_NAME}
-    - mvn package spring-boot:repackage
-    - mv target/app.jar $PWD/docker
-    - npm install --registry https://nexus.choerodon.com.cn/repository/choerodon-npm/ --sass-binary-site=http://npm.taobao.org/mirrors/node-sass
+    - npm install --registry ${NPM_REPO} --sass-binary-site=http://npm.taobao.org/mirrors/node-sass
     - chmod -R 755 node_modules
     - npm run compile
-    - echo '//${NPM_REGISTRY}:_authToken=${NPM_TOKEN}'>.npmrc
+    - echo "//${NPM_REGISTRY}:_authToken=${NPM_TOKEN}">.npmrc
     - npm publish --registry https://nexus.choerodon.com.cn/repository/private-npm/
-    - curl -X POST -F token=${FRONT_REPOSITORY_TOKEN} -F ref=${REF_NAME} https://code.choerodon.com.cn/api/v4/projects/32/trigger/pipeline
-    - kaniko -c $PWD/docker -f $PWD/docker/Dockerfile -d ${DOCKER_REGISTRY}/${GROUP_NAME}/${PROJECT_NAME}:${CI_COMMIT_TAG}
-  only:
-    refs:
-      - master
-      - tags
-      - /^release-.*$/
-      - /^hotfix-.*$/
+    - curl -sX POST -F token=${FRONT_REPOSITORY_TOKEN} -F ref=${REF_NAME} https://code.choerodon.com.cn/api/v4/projects/7909/trigger/pipeline
+  except:
+    changes:
+      - pom.xml
+      - src/**/*
+      - docker/**/*
+      - chart/**/*
+      - init-database.sh
+      - .circleci/**/*
+      - .gitignore
+      - .github/**/*
+      - .gitlab-ci.yml
+      - "*.md"
     variables:
-      - $COMBINE == null
+      - $CI_COMMIT_MESSAGE =~ /combine/
 
-build-combine:
+build backend:
   stage: build
   script:
     - update_pom_version
-    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent test -Dmaven.test.failure.ignore=true -DskipTests=false -U
-    - mvn --batch-mode  verify sonar:sonar  -Dsonar.host.url=$SONAR_URL -Dsonar.login=$SONAR_LOGIN -Dsonar.gitlab.project_id=$CI_PROJECT_PATH -Dsonar.gitlab.commit_sha=$CI_COMMIT_SHA -Dsonar.gitlab.ref_name=$CI_COMMIT_REF_NAME -Dsonar.analysis.serviceGroup=$GROUP_NAME -Dsonar.analysis.commitId=$CI_COMMIT_SHA -Dsonar.projectKey=${GROUP_NAME}:${PROJECT_NAME}
-    - mvn package spring-boot:repackage
+    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent test -Dmaven.test.failure.ignore=true -DskipTests=true -U
+    - >-
+        mvn --batch-mode verify sonar:sonar
+        -Dsonar.host.url=$SONAR_URL
+        -Dsonar.login=$SONAR_LOGIN
+        -Dsonar.gitlab.project_id=$CI_PROJECT_PATH
+        -Dsonar.gitlab.commit_sha=$CI_COMMIT_SHA
+        -Dsonar.gitlab.ref_name=$CI_COMMIT_REF_NAME
+        -Dsonar.analysis.serviceGroup=$GROUP_NAME
+        -Dsonar.analysis.commitId=$CI_COMMIT_SHA
+        -Dsonar.projectKey=${GROUP_NAME}:${PROJECT_NAME}
+    - mv target/app.jar $PWD/docker
+    - kaniko -c $PWD/docker -f $PWD/docker/Dockerfile -d ${DOCKER_REGISTRY}/${GROUP_NAME}/${PROJECT_NAME}:${CI_COMMIT_TAG}
+  except:
+    changes:
+      - .eslintrc.json
+      - .stylelintrc.json
+      - package.json
+      - react/**/*
+      - tsconfig.json
+      - .gitignore
+      - .github/**/*
+      - .gitlab-ci.yml
+      - "*.md"
+    variables:
+      - $CI_COMMIT_MESSAGE =~ /combine/
+
+build combine:
+  stage: build
+  script:
+    - update_pom_version
+    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent test -Dmaven.test.failure.ignore=true -DskipTests=true -U
+    - >-
+        mvn --batch-mode verify sonar:sonar
+        -Dsonar.host.url=$SONAR_URL
+        -Dsonar.login=$SONAR_LOGIN
+        -Dsonar.gitlab.project_id=$CI_PROJECT_PATH
+        -Dsonar.gitlab.commit_sha=$CI_COMMIT_SHA
+        -Dsonar.gitlab.ref_name=$CI_COMMIT_REF_NAME
+        -Dsonar.analysis.serviceGroup=$GROUP_NAME
+        -Dsonar.analysis.commitId=$CI_COMMIT_SHA
+        -Dsonar.projectKey=${GROUP_NAME}:${PROJECT_NAME}
     - mv target/app.jar docker
-    - npm install --registry https://nexus.choerodon.com.cn/repository/choerodon-npm/ --sass-binary-site=http://npm.taobao.org/mirrors/node-sass
+    - npm install --registry ${NPM_REPO} --sass-binary-site=http://npm.taobao.org/mirrors/node-sass
     - chmod -R 755 node_modules
     - npm run dist
     - mv src/main/resources/lib/dist docker
     - kaniko -c $PWD/docker -f $PWD/docker/Dockerfile-combine -d ${DOCKER_REGISTRY}/${GROUP_NAME}/${PROJECT_NAME}:${CI_COMMIT_TAG}
   only:
     variables:
-      - $COMBINE == "true"
+      - $CI_COMMIT_MESSAGE =~ /combine/
 
-release:
+release backend:
   stage: release
   script:
     - chart_build
+  except:
+    changes:
+      - .eslintrc.json
+      - .stylelintrc.json
+      - package.json
+      - react/**/*
+      - tsconfig.json
+      - .gitignore
+      - .github/**/*
+      - .gitlab-ci.yml
+      - "*.md"
+    variables:
+      - $CI_COMMIT_MESSAGE =~ /combine/
+
+release combine:
+  stage: release
+  script:
+    - chart_build
+  only:
+    variables:
+      - $CI_COMMIT_MESSAGE =~ /combine/
 
 .auto_devops: &auto_devops |
   http_status_code=`curl -o .auto_devops.sh -s -m 10 --connect-timeout 10 -w %{http_code} "${CHOERODON_URL}/devops/ci?token=${Token}&type=microservice"`
