[IMP]调整工作目录

--- a/docker/Dockerfile-combine
+++ b/docker/Dockerfile-combine
@@ -1,7 +1,8 @@
 FROM registry.cn-shanghai.aliyuncs.com/c7n/javabase:0.9.0
-COPY app.jar /manager-service.jar
-COPY dist /dist
-RUN chmod +x /dist/env.sh \
-    && chown -R www-data:www-data /manager-service.jar /dist
+WORKDIR /choerodon
+COPY app.jar manager-service.jar
+COPY dist dist
+RUN chmod +x /choerodon/dist/env.sh \
+    && chown -R www-data:www-data /choerodon
 USER www-data
-CMD /dist/env.sh java $JAVA_OPTS $SKYWALKING_OPTS -jar /manager-service.jar
+CMD /choerodon/dist/env.sh java $JAVA_OPTS $SKYWALKING_OPTS -jar /choerodon/manager-service.jar
