--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,6 @@
 FROM registry.cn-shanghai.aliyuncs.com/c7n/javabase:0.9.0
-COPY app.jar /manager-service.jar
-RUN chown -R www-data:www-data /manager-service.jar
+WORKDIR /choerodon
+COPY app.jar manager-service.jar
+RUN chown -R www-data:www-data /choerodon
 USER www-data
-CMD java $JAVA_OPTS $SKYWALKING_OPTS -jar /manager-service.jar
+CMD java $JAVA_OPTS $SKYWALKING_OPTS -jar /choerodon/manager-service.jar
