[IMP]默认不收集日志

--- a/chart/manager-service/values.yaml
+++ b/chart/manager-service/values.yaml
@@ -160,7 +160,8 @@ metrics:
   # 性能指标应用分组
   group: spring-boot
 
-## 日志收集
+# 是否收集日志至EFK
 logs:
+  enabled: false
   # 日志收集格式
   parser: spring-boot
