--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@choerodon/manager",
   "routeName": "manager",
-  "version": "0.20.0",
+  "version": "0.21.0",
   "description": "",
   "main": "./lib/src/app/iam/containers/IAMIndex.js",
   "files": [
     "lib"
   ],
   "peerDependencies": {
-    "@choerodon/boot": "0.19.x",
-    "@choerodon/master": "0.19.x"
+    "@choerodon/boot": "0.21.0",
+    "@choerodon/master": "0.22.0"
   },
   "dependencies": {
     "echarts": "^4.2.1",
@@ -18,12 +18,8 @@
     "react-codemirror": "^1.0.0"
   },
   "devDependencies": {
-    "@choerodon/boot": "0.19.1",
-    "@choerodon/master": "0.19.x",
-    "babel-preset-env": "^1.7.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.1",
-    "through2": "^2.0.3"
+    "@choerodon/boot": "0.21.0",
+    "@choerodon/master": "0.22.0"
   },
   "scripts": {
     "start": "choerodon-front-boot start --config ./react/config.js",
