[IMP] 接口页面接口详情中添加复制按钮

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "echarts": "^4.2.1",
     "echarts-for-react": "^2.0.14",
     "hjson": "^3.1.2",
-    "react-codemirror": "^1.0.0"
+    "react-codemirror": "^1.0.0",
+    "react-copy-to-clipboard": "^5.0.2"
   },
   "devDependencies": {
     "@choerodon/boot": "0.21.0",
