--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "devDependencies": {
     "@choerodon/boot": "0.21.2",
-    "@choerodon/master": "0.22.0-hzero"
+    "@choerodon/master": "0.22.0-hzero",
+    "choerodon-ui": "^0.8.62"
   },
   "scripts": {
     "start": "choerodon-front-boot start --config ./react/config.js",
