--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@choerodon/manager",
   "routeName": "manager",
-  "version": "0.22.0-hzero",
+  "version": "0.22.0",
   "description": "",
   "main": "./lib/src/app/iam/containers/IAMIndex.js",
   "files": [
@@ -9,7 +9,7 @@
   ],
   "peerDependencies": {
     "@choerodon/boot": "0.21.2",
-    "@choerodon/master": "0.22.0-hzero"
+    "@choerodon/master": "0.22.0"
   },
   "dependencies": {
     "echarts": "^4.2.1",
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "@choerodon/boot": "0.21.2",
-    "@choerodon/master": "0.22.0-hzero",
+    "@choerodon/master": "0.22.0",
     "choerodon-ui": "^0.8.62"
   },
   "scripts": {
